--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development yarn run start",
     "start": "node ./bin/www",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "clean": "rm -rf ./assets && mkdir ./assets",
+    "clean": "rm -rf ./assets && mkdir assets",
     "pretty": "prettier --single-quote --trailing-comma es5 --write {client,bin,config,server}{/*,/**/*}.js",
     "precommit": "yarn run pretty"
   },
@@ -25,33 +25,8 @@
     "android >= 4.4"
   ],
   "dependencies": {
-    "@shopify/polaris": "^1.8.3",
+    "@shopify/polaris": "^1.12.4",
     "@shopify/shopify-express": "^1.0.0-alpha.7",
-    "chalk": "^1.1.3",
-    "connect-redis": "^3.3.0",
-    "cross-env": "^5.1.3",
-    "debug": "~2.6.3",
-    "dotenv": "^4.0.0",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
-    "express-session": "^1.15.3",
-    "knex": "^0.13.0",
-    "morgan": "~1.8.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-object-inspector": "^0.2.1",
-    "react-redux": "^5.0.5",
-    "redis": "^2.7.1",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "shopify-api-node": "^2.11.0",
-    "sqlite3": "^3.1.9",
-    "url": "^0.11.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-middleware": "^1.5.1"
-  },
-  "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
@@ -59,15 +34,40 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^1.1.3",
+    "connect-redis": "^3.3.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.4",
+    "debug": "~2.6.3",
+    "dotenv": "^5.0.1",
+    "ejs": "~2.5.6",
     "eslint": "3.19.0",
     "eslint-plugin-prettier": "^2.1.2",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "global": "^4.3.2",
+    "knex": "^0.13.0",
+    "morgan": "~1.8.1",
     "postcss-loader": "^2.0.6",
     "prettier": "^1.5.2",
+    "pug": "^2.0.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-object-inspector": "^0.2.1",
+    "react-redux": "^5.0.5",
+    "redis": "^2.8.0",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "shopify-api-node": "^2.11.0",
+    "sqlite3": "^3.1.9",
     "style-loader": "^0.18.2",
+    "url": "^0.11.0",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  }
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-middleware": "^1.5.1"
+  },
+  "devDependencies": {}
 }
